--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@mui/material": "^5.14.8",
     "axios": "^1.5.0",
     "gsap": "^3.12.2",
-    "locomotive-scroll": "^5.0.0-beta.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7"
@@ -33,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
+    "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
