--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.8",
+    "animejs": "^3.2.1",
     "axios": "^1.5.0",
+    "d3": "^7.8.5",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
