--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
