--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animejs": "^3.2.1",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
+    "d3-axis": "^3.0.0",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
