--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3-axis": "^3.0.0",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7"
   },
